force-app/main/default/objects/Subject__c/Subject__c.object-meta.xml
<CustomObject>
    <description>The subject to be discussed</description>
    <label>Subject</label>
    <nameField>
        <displayFormat>Subject-{000000}</displayFormat>
        <label>Sequence</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subject</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>