force-app/main/default/objects/Subject__c/fields/ConcatenatedField__c.field-meta.xml
<CustomField>
    <fullName>ConcatenatedField__c</fullName>
    <label>Concatenated Field</label>
    <type>TextArea</type>
</CustomField>