force-app/main/default/objects/Subject__c/fields/KnowledgeArea__c.field-meta.xml
<CustomField>
    <fullName>KnowledgeArea__c</fullName>
    <label>Knowledge Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>KnowledgeArea</valueSetName>
    </valueSet>
</CustomField>