force-app/main/default/objects/Subject__c/fields/SearchString__c.field-meta.xml
<CustomField>
    <fullName>SearchString__c</fullName>
    <formula>HYPERLINK(
   LEFT($Api.Partner_Server_URL_260, FIND( &#39;/services&#39;, $Api.Partner_Server_URL_260)) + Id,
    ConcatenatedField__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Search String</label>
    <type>Text</type>
</CustomField>