force-app/main/default/objects/Subject__c/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <description>Skill related to Knowledge Area</description>
    <label>Skill</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>KnowledgeArea__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Skill</valueSetName>
    </valueSet>
</CustomField>