force-app/main/default/objects/Subject__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>KnowledgeArea__c</columns>
    <columns>Skill__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>